*
*  This file contains all changes to HTML code since 2015-03-24,        
*  and is used to track code edits with regards to implementation       
*  in Eloqua by DemandGen team.     
*       
*  For any questions, contact Anders Feldinger af@andersfeldinger.dk    
* 
**************************************************************************

2015-04-23

  Product page
  * Corrected nesting for .form-step-1 in order product sample form, as per Claudia's findings

2015-04-22

  Main template
  * jquery removed from minified script file, as per request from Alex
  * jquery added as individual script link

  Article page
  * <div class="dynBlock"> wrapper element added to mimic Eloqua output
  * sample content blocks for styling purposes only

2015-04-20

  Contact page:
   *  Body text added from text document, Web topic ID: A1.3 contact

2015-04-02

  Frontpage hero signup:
   *  Moved signup form outside of hero section, as per request from Alex

2015-04-01

  Footer:

   *  Changed text in product section

  Navigation:

   *  Added description text to the remaining five items. Coloplast approval of text still pending

  Quality of Life form

   *  Removed text section at the top of the page due to lack of content, leaving only the header and the form itself

2015-03-30

  Footer:
   *  Changed phone number. New email address is pending.


2015-03-27

  Navigation:

   *  Changed markup for main navigation items, so they support not having links on sections.
      Use <a class="nav-item"> for items with links and <div class="nav-item"> for items with no links

   *  Changed section title "About Coloplast" to "Coloplast"

  Footer:

   *  Removed <section class="social"> from footer, due to lack of relevant links

  Video tiles:

   *  Removed <span class="icon icon-media-playback"> from video tiles. Safety information for overlay
      is temporarily hardcoded in english in the javascript. This needs to change for phase 2
