@@ -115,13 +115,15 @@
 				position:absolute; 
 				top:0;
 				left:0;
-				right:0;
-				bottom:0;
+				width: 100%;
+				height: 100%;
+				margin:0;
+				background:rgba(0,255,0,.3);
 				img {
 					position:absolute;
 					left: 0;
 					bottom: 0;
-					width: auto;
+					width: 100%;
 					height: auto;
 					min-width: 100%;
 					min-height: 100%;
@@ -185,10 +187,9 @@
 					position:absolute;
 					left: 0;
 					bottom: 0;
-					width: auto;
+					width: 100%;
+					max-width: 100%;
 					height: auto;
-					min-width: 100%;
-					min-height: 100%;
 					filter: blur(10px) brightness(0.6);
 					transform: scale(1.06);
 					backface-visibility: hidden;
