@@ -103,7 +103,7 @@
 			top:0;
 			left:50%;
 			height:100%;
-			margin-left: -($lg/2);
+			margin-left: -($lg-bp/2);
 			margin-right: 0;
 		}
 
