@@ -9,11 +9,12 @@ page_type: product
 
 
 <div class="article-full type-product">
-	<div class="article-header" style="">
+	<div class="article-header" style="background-image:url(http://www.coloplast.com/Global/Care-Eloqua_Content/Solutions/S2.5/S2.5_Article-Hero-Large.jpg)">
 		<div class="content-wrapper">
 			<div class="content-block">
 				<div class="elm-image">
-					<img src="../_source/assets/img/samples/product_hero_speedicath.png" alt="Image text" border="0">
+					<!--<img src="../_source/assets/img/samples/product_hero_speedicath.png" alt="Image text" border="0">-->
+					<img src="http://www.coloplast.com/Global/Care-Eloqua_Content/Solutions/S2.5/S2.5_Article-Hero-Large.jpg" alt="Product" border="0">
 				</div>
 				<div class="elm-content">
 					<h1>
